# wanliz

./: .clangd  .gitignore  CMakeLists.txt  Untitled-2.sh  WhoLocks.ps1  bash-functions.sh  bash-functions.sh.inc  cmd-to-build-4-files.cmd  config-env.sh  config-linux-env.sh  config-windows-env.ps1  export-nfs-dir.sh  export-smb-dir.sh  functions.sh  hosts  hosts.txt  inspect-chi-impact-on-spark  inspect-chi-impact-on-spark.py  install-nvidia-driver.sh  nvidia-smi-watch.sh  nvmake.sh  nvperf  nvperf.py  process-pushbuffer-dump.py  process-pushbuffer.py  process-vidheap-peter.py  rsync-home-files.sh  rsync-push-home-files.sh  setup-linux-env.sh  setup-windows-env.ps1  ssh-config.txt  system-info.sh  wanliz-branch-switch.sh  wanliz-clangd-database.py  wanliz-cmd-builder.sh  wanliz-config.ps1  wanliz-config.sh  wanliz-dump-gpu-pages.sh  wanliz-env-config.ps1  wanliz-env-config.sh  (+22 more)
.cursor/rules/: all-in-one.mdc
apps/gpu-perf-inspector/: CMakeLists.txt  VK_queue.h
apps/gpu-perf-inspector/VkLayer_gpu_perf_inspector/: VkLayer_common.cpp  VkLayer_common.h  VkLayer_hooked_mem_alloc.cpp
apps/gpu-perf-inspector/scripts/: install.sh  run-microbench-alloc27.sh
apps/inspect-gpu-perf-gaps/: .clangd  CMakeLists.txt  CMakePresets.json  VK_instance.cpp  VK_instance.h  VK_physdev.cpp  VK_physdev.h  VK_queue.cpp  main.cpp  run.sh
apps/inspect-gpu-perf-info/: .clangd  CMakeLists.txt  CMakePresets.json  VK_LAYER_inspect_gpu_perf_info.json.in  VK_common.cpp  VK_common.h  VK_instance.cpp  VK_instance.h  VK_physdev.cpp  VK_physdev.h  VK_queue.h  VkLayer_common.cpp  VkLayer_common.h  VkLayer_hooked_alloc.cpp  VkLayer_hooked_create_device.cpp  VkLayer_hooked_create_device.h  VkLayer_hooked_create_instance.cpp  VkLayer_hooked_create_instance.h  VkLayer_hooked_mem_alloc.cpp  VkLayer_hooked_mem_alloc.h  VkLayer_inspect_gpu_perf_info.cpp  common.h  install-symbolic-links.sh  install.sh  main.cpp  merge-gpu-pages.sh  run-generic-app.sh  run-generic-app.sh.sh  run-microbench-alloc27.sh  run.sh
apps/inspect-gpu-perf-info/VkLayer_igpi_helper/: VK_LAYER_igpi_helper.json.in  VkLayer_common.cpp  VkLayer_common.h  VkLayer_hooked_create_device.cpp  VkLayer_hooked_mem_alloc.cpp
apps/inspect-gpu-perf-info/scripts/: install-gpu-pages-inspector.sh  install-symbolic-links.sh  install.sh  merge-gpu-pages.sh  run-microbench-alloc27.sh
apps/wanliz-utils/: cmdlet.sh  gpuinfo.sh  igpt-config.sh  igpt-merge.sh  inspect-gpu-page-tables  inspect-gpu-page-tables.sh  inspect-vidheap.py  microbench.sh  myip  nvdriver  nvinstall.sh  nvmake  nvmake-inside-wsl2.sh  nvmake.sh  nvperf.py  nvrmmod  nvrmmod.sh  p4changes  p4changes.sh  p4checkout  p4cherrypick  p4cherrypick.sh  p4diff  p4diff.sh  p4env  p4env.sh  p4patch  p4pending  p4pull  p4pull.sh  p4stash  p4status  picx-config.sh  process-page-tables.py  pull  push  push.sh  rmnvmod  spark-config  startx.sh  (+9 more)
deprecated/: cmd-builder.sh  cmdlet.sh  p4changes.sh  p4checkout.sh  p4cherrypick.sh  p4diff.sh  p4pull.sh  p4stash.sh  p4status.sh  testcase-gb300.sh  testcase-spark.sh  testcase-viewperf.sh  wanliz-cmd-builder.sh  wanliz-gb300-inspect.sh  wanliz-viewperf.sh  zpush.sh
drafts/: pi_reader.py  uninstall_onedrive.ps1
glbench/: CMakeLists.txt
glbench/glad/: glad.c  glx.h
glbench/msaa/: glwindow_impl.cpp  shader.vert.glsl
glbench/window/: glwindow.h  vkwindow.h  window_tools.h
glvktest/: .clangd  CMakeLists.txt
glvktest/glad/: egl.h  gl.h  wgl.h
glvktest/msaa/: glwindow_impl.h  main.cpp  shader.frag.glsl  vkwindow_impl.cpp  vkwindow_impl.h
glvktest/window/: glwindow.cpp  vkwindow.cpp
gpu-perf-inspector/: CMakeLists.txt  VK_instance.h  VK_physdev.cpp  main.cpp
gpu-perf-inspector/VkLayer_gpu_perf_inspector/: VkLayer_gpu_perf_inspector.json.in  VkLayer_hooked_mem_alloc.h
scripts/: NvConfig.sh  NvDisplay.sh  NvInstall.sh  NvMake.sh  NvTest-Viewperf-with-GDB.sh  NvTest-Viewperf.sh  pi_reader.ipynb  pi_reader_chi_limited.py  ragdoc_extract_text.py
vulkanbench/: VK_TestCase.h  VK_TestCase_IMPL_buffercopy.cpp  VK_TestCase_IMPL_imagebuffercopy.cpp  VK_TestCase_IMPL_memcopy.cpp  build-aarch64.sh  build-linux-aarch64-cuda.sh  build-linux-aarch64.sh  build-linux-cuda.sh  build-linux.sh  build-windows.ps1  build.sh  install-aarch64-deps.sh  main.cpp  test_bufcopy.cpp  test_cases.h
vulkanbench/cuda/: CUDA_TestCase_IMPL_memcopy_buf2img.cu
vulkanbench/objects/: VK_buffer.cpp  VK_buffer.h  VK_common.cpp  VK_common.h  VK_compute_pipeline.cpp  VK_compute_pipeline.h  VK_device.cpp  VK_device.h  VK_image.cpp  VK_image.h  VK_instance.cpp  VK_instance.h  VK_physdev.cpp  VK_physdev.h  VK_query_pool.cpp  VK_query_pool.h  VK_queue.cpp  VK_queue.h  VK_shader.cpp  VK_shader.h  VK_swapchain.cpp  VK_swapchain.h
vulkanbench/windows/: schedule-startup-tasks.ps1
windows/: restore-classic-context-menu.ps1  update-hosts.ps1  wanliz-config.ps1
